examples/errors/music/unexpected_brackets.abc
X:1
T:Unexpected Closers
K:C
% M004, M005, M006: Unexpected closing brackets
CDE]F|
GAB)c|
def}g|
